# gitig

./: .gitignore  .readthedocs.yaml  CHANGELOG-semantic.md  CHANGELOG.md  CLAUDE.md  README.md  README.rst  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: api.rst  changelog.rst  conf.py  development.rst  index.rst  installation.rst  usage.rst
docs/api/: gitig.rst  modules.rst
gitig/: __init__.py  _logging.py  net.py
ign/: __init__.py
scripts/: update-changelog.py
