[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gitig"
authors = [
    {name = "Eugene Kim", email = "ab@astral.blue"},
]
description = "A tool for composing and synchronizing .gitignore from GitHub's template collection."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]
dependencies = [
    "black>=25.1.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort[colors]",
    "pytest",
    "pytest-cov",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/astralblue/gitig"
Repository = "https://github.com/astralblue/gitig"
Issues = "https://github.com/astralblue/gitig/issues"

[tool.isort]
profile = "black"
skip_gitignore = true

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
]
