[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gitig"
authors = [
    { name = "Eugene Kim", email = "ab@astral.blue" },
]
description = "A tool for composing and synchronizing .gitignore from GitHub's template collection."
readme = "README.rst"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]
dependencies = [
    "async-lru>=2.0.5",
    "black>=25.1.0",
    "httpx>=0.28.1",
    "patch-ng>=1.18.1",
    "pygithub>=2.6.1",
    "python-dotenv>=1.1.1",
    "python-json-logger>=3.3.0",
    "rich>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "isort[colors]>=6.0.1",
    "pytest",
    "pytest-cov",
    "ruff>=0.12.2",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/astralblue/gitig"
Repository = "https://github.com/astralblue/gitig"
Issues = "https://github.com/astralblue/gitig/issues"

[project.scripts]
gitig = "gitig:main"

[tool.isort]
profile = "black"
skip_gitignore = true

