[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ign"
authors = [
    { name = "Eugene Kim", email = "ab@astral.blue" },
]
description = "A tool for composing and synchronizing .gitignore from GitHub's template collection."
readme = "README.rst"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]
dependencies = [
    "async-lru>=2.0.5",
    "httpx>=0.28.1",
    "patch-ng>=1.18.1",
    "pygithub>=2.6.1",
    "python-dotenv>=1.1.1",
    "python-json-logger>=3.3.0",
    "rich>=14.0.0",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]
build = [
    "flit>=3.12.0",
]

[project.urls]
Homepage = "https://github.com/astralblue/ign"
Repository = "https://github.com/astralblue/ign"
Issues = "https://github.com/astralblue/ign/issues"

[project.scripts]
ign = "ign:main"

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["I"]  # Enable import sorting

[tool.ruff.lint.isort]
# Black-compatible settings
force-single-line = false
combine-as-imports = true
split-on-trailing-comma = true

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "python-kacl>=0.6.5",
    "ruff>=0.12.2",
    "pypandoc>=1.13",
    "m2r2>=0.3.3",
    "python-semantic-release>=9.0.0",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = ""
dist_path = "dist/"
upload_to_pypi = false
upload_to_release = true
commit_message = "chore: release {version}"
tag_format = "v{version}"
remote_name = "astralblue"
remote_url = "https://github.com/astralblue/ign.git"
major_on_zero = false
allow_zero_version = true
changelog_file = "CHANGELOG-auto.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "test", "chore", "perf", "ci", "build", "revert"]
minor_tags = ["feat!"]
patch_tags = ["feat", "fix", "perf", "refactor", "style", "test", "build", "ci", "chore", "docs"]

[tool.semantic_release.changelog]
template_dir = "templates"
exclude_commit_patterns = ["^chore: release"]

